[package]
name = "standalone-proc-macro2"
version = "0.2.2" # remember to update html_root_url
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/staktrace/standalone-proc-macro2"
description = "Fork of proc-macro2 that uses rustc-ap-proc_macro so as to remove the rustc dylib dependency"

[lib]
doctest = false

[dependencies]
unicode-xid = "0.1"
rustc-ap-proc_macro = "40.0.0"

[features]
# When enabled: act as a shim around the nightly compiler's proc_macro crate.
# This requires a nightly compiler.
#
# When disabled: emulate the same API as the nightly compiler's proc_macro crate
# but in a way that works on all stable compilers >=1.15.0.
nightly = []
